# project

./: CMakeLists.txt  README.md
cmake/: FindSphinx.cmake  add_target_parent.cmake  download.CMakeLists.cmake.in  download.cmake  install.cmake  make_unit.cmake  project_nameConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in
include/project/: project.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt
